--- a/front-end/index.html
+++ b/front-end/index.html
@@ -15,9 +15,15 @@
 		article footer {
 			border-top: 1px dotted #555;
 		}
+		p.text-justify {
+	      	display: flex;
+	    	flex-direction: column;
+	    	align-items: center;
+	    	justify-content: center;
+		}
 	</style>
 </head>
-<body>
+<body class="jumbotron">
 	<h1 class="text-center mb-5">News feed</h1>
 	<div class="container">
 		<div class="row">
